jenkins file with echo

--- a/my-web-app/Jenkinsfile
+++ b/my-web-app/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven 3.9.7' 
+        maven 'Maven 3.9.7' // Make sure this is your Maven version
     }
     environment {
         PATH = "/usr/local/sdkman/candidates/maven/current/bin:${env.PATH}" // Adjust if needed
@@ -24,7 +24,7 @@ pipeline {
         }
         stage('Code Review') { 
             steps {
-                sh 'mvn checkstyle:check' 
+                sh 'mvn checkstyle:check'  // Adjust if using a different code analysis tool
             }
         }
         stage('Unit Test') {
@@ -34,7 +34,8 @@ pipeline {
         }
         stage('Package') {
             steps {
-                sh 'mvn package'
+                sh 'mvn -X package' // Enable debug logging
+                echo "WAR file name: $(ls target/*.war)" 
             }
         }
         stage('Deploy to Local Tomcat') {
@@ -42,7 +43,8 @@ pipeline {
                 script {
                     def warFileName = sh(script: 'ls target/*.war', returnStdout: true).trim()
                     echo "WAR file name: ${warFileName}"
-                    def tomcatWebapps = sh(script: 'echo $CATALINA_HOME/webapps/', returnStdout: true).trim() // Get webapps dir
+                    def tomcatWebapps = sh(script: 'echo $CATALINA_HOME/webapps/', returnStdout: true).trim() 
+                    echo "Tomcat webapps directory: ${tomcatWebapps}"
                     sh "cp target/${warFileName} ${tomcatWebapps}"
                 }
             }
