--- a/my-web-app/pom.xml
+++ b/my-web-app/pom.xml
@@ -1,36 +1,56 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sandersfresco</groupId>
-    <artifactId>my-web-app</artifactId>  
-    <packaging>war</packaging> 
-    <version>1.0-SNAPSHOT</version>
-    <name>my-web-app Maven Webapp</name>
+    <artifactId>my-web-app</artifactId>
+    <version>1.0-SNAPSHOT</version> 
+    <packaging>war</packaging>
+    <name>my-web-app</name>  
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>  
+        <maven.compiler.target>11</maven.compiler.target>  
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>  
-            <scope>test</scope> 
+            <groupId>org.junit.jupiter</groupId>  
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0</version> 
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.0</version> 
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.servlet</groupId> 
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
+            <scope>provided</scope>
         </dependency>
 
         </dependencies>
 
     <build>
-        <finalName>my-web-app</finalName>  
+        <finalName>${project.artifactId}</finalName> 
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>  
-                </configuration>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
             </plugin>
-
-</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.4.0</version> 
+            </plugin>
+        </plugins>
     </build>
 </project>
