"Update Jenkinsfile to use Maven 3.9.7"

--- a/my-web-app/Jenkinsfile
+++ b/my-web-app/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven 3.9.7'
+        maven 'Maven 3.9.7'  // Ensure the name matches what you configured in Jenkins
     }
     environment {
         PATH = "/usr/local/sdkman/candidates/maven/current/bin:${env.PATH}"
