--- a/my-web-app/pom.xml
+++ b/my-web-app/pom.xml
@@ -13,36 +13,29 @@
         <maven.compiler.source>11</maven.compiler.source>  
         <maven.compiler.target>11</maven.compiler.target>  
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit.jupiter.version>5.10.0</junit.jupiter.version> <!-- Add JUnit Jupiter version property -->
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>  
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.10.0</version> 
-            <scope>test</scope>
-        </dependency>
-             <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>${junit.jupiter.version}</version> 
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.0</version> 
+            <version>${junit.jupiter.version}</version> 
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>jakarta.servlet</groupId> 
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
-
-        </dependencies>
+    </dependencies>
 
     <build>
         <finalName>${project.artifactId}</finalName> 
@@ -52,7 +45,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
             </plugin>
-           <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
