--- a/my-web-app/Jenkinsfile
+++ b/my-web-app/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven 3.9.7'  // Ensure the name matches what you configured in Jenkins
+        maven 'Maven 3.9.7' // Ensure the name matches what you configured in Jenkins
     }
     environment {
         PATH = "${tool 'Maven 3.9.7'}/bin:${env.PATH}" // Best practice to get Maven path dynamically
@@ -34,9 +34,12 @@ pipeline {
         }
         stage('Deploy to Local Tomcat') {
             steps {
-                sh '''
-                cp target/my-web-app.war ~/tomcat/webapps/
-                '''
+                sh 'cp target/my-web-app.war ~/tomcat/webapps/'
+            }
+        }
+        stage('Verify WAR File') {
+            steps {
+                sh 'ls -l target/'
             }
         }
     }
